Fixed search overflow and added back navigation

--- a/src/components/layout/NavHeader.module.css
+++ b/src/components/layout/NavHeader.module.css
@@ -12,6 +12,7 @@ nav {
   padding-block: 30px;
   background-color: rgb(5, 146, 202);
   border-bottom: 1px solid rgb(180, 172, 172);
+  padding-inline: 5%;
 }
 
 .logo {
@@ -39,4 +40,29 @@ input {
   width: 250px;
   outline: none;
   padding: 7px;
+}
+
+.goback {
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.icon {
+  font-size: 30px;
+}
+
+@media (max-width: 600px) {
+  .logo {
+    margin-left: 15px;
+  }
+
+  input {
+    width: 100%;
+    outline: none;
+    padding: 7px;
+  }
 }
